...
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/handphoneoremail"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="text"
...
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    app:password="@={viewModel.password}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_16"
                android:onClick="@{(view)->viewModel.onLogin(view)}"
                android:text="@string/login"
                android:textAllCaps="false"
...
